welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: not found: value getPos
		for (y<-(0 to getPos+1).reverse)
                              ^